--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -36,6 +36,7 @@
         android:text="註冊"
         android:textColor="#000000"
         android:textSize="20sp"
+        android:onClick="goToSignUpOne"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
